# tsk-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  tsk.toml
.github/: dependabot.yml
src/: index.rs  lib.rs  main.rs  metadata.rs  namespace.rs  note.rs  notify.rs  parser.rs  project.rs  schema.rs  settings.rs  tag.rs  task.rs
src/parser/: lexicon.rs  mod.rs  task.rs  task_lexicon.rs
