[package]
name = "tsk-rs"
version = "0.1.1"
edition = "2021"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
description = "A task manager"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bat = { version = "0.22.1", default-features = false, features = ["regex-fancy"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.1.11", features = ["derive", "string", "env"] }
cli-table = "0.4.7"
config = "0.13.3"
directories = "5.0.1"
dotenv = "0.15.0"
edit = "0.1.4"
file-lock = "2.1.9"
glob = "0.3.1"
hhmmss = "0.1.0"
markdown = "1.0.0-alpha.10"
nom = "7.1.3"
question = "0.2.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
simple-file-rotation = "0.3.4"
strum = { version = "0.25.0", features = ["derive"] }
termtree = "0.4.1"
thiserror = "1.0.40"
toml = "0.7.5"
uuid = { version = "1.3.4", features = ["v4", "v5", "serde"] }

#eof
