[package]
name = "tsk-rs"
version = "0.2.12"
edition = "2021"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
description = "A task manager"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define the features
[features]
notify = ["dep:notify", "dep:notify-debouncer-mini", "dep:regex", "dep:path-absolutize"]
default = ["note"]
note = ["dep:markdown", "dep:termtree"]

# tsk command
[[bin]]
name = "tsk"
path = "src/bin/tsk.rs"

# tsknt command
[[bin]]
name = "tsknt"
path = "src/bin/tsknt.rs"
required-features = ["note"]

# tskmon command
[[bin]]
name = "tskmon"
path = "src/bin/tskmon.rs"
required-features = ["notify"]

[dependencies]
color-eyre = "0.6.2"
bat = { version = "0.23.0", default-features = false, features = ["regex-fancy"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "string", "env"] }
cli-table = "0.4.7"
config = "0.13.3"
directories = "5.0.1"
dotenv = "0.15.0"
edit = "0.1.4"
file-lock = "2.1.9"
glob = "0.3.1"
hhmmss = "0.1.0"
markdown = { version = "1.0.0-alpha.12", optional = true }
nom = "7.1.3"
question = "0.2.2"
# later versions of serde_derive ship precompiled binaries, https://github.com/serde-rs/serde/issues/2538#issuecomment-1682519944
serde = { version = "=1.0.188", features = ["derive"] }
serde_yaml = "0.9.22"
simple-file-rotation = "0.3.4"
strum = { version = "0.25.0", features = ["derive"] }
termtree = { version = "0.4.1", optional = true }
thiserror = "1.0.49"
toml = "0.8.2"
uuid = { version = "1.4.0", features = ["v4", "v5", "serde"] }
notify = { version = "6.1.1", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
regex = { version = "1.9.4", optional = true }
path-absolutize = { version = "3.1.1", optional = true }

#eof
