[package]
name = "tsk-rs"
version = "0.2.17"
edition = "2021"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
description = "A task manager"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/braincow/tsk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define the features
[features]
notify = ["dep:notify", "dep:notify-debouncer-mini", "dep:regex", "dep:path-absolutize"]
default = ["note"]
note = ["dep:markdown", "dep:termtree"]

# tsk command
[[bin]]
name = "tsk"
path = "src/bin/tsk.rs"

# tsknt command
[[bin]]
name = "tsknt"
path = "src/bin/tsknt.rs"
required-features = ["note"]

# tskmon command
[[bin]]
name = "tskmon"
path = "src/bin/tskmon.rs"
required-features = ["notify"]

[dependencies]
color-eyre = "0.6.3"
bat = { version = "0.24.0", default-features = false, features = ["regex-fancy"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "string", "env"] }
cli-table = "0.4.7"
config = "0.14.0"
directories = "5.0.1"
dotenv = "0.15.0"
edit = "0.1.5"
file-lock = "2.1.11"
glob = "0.3.1"
hhmmss = "0.1.0"
markdown = { version = "1.0.0-alpha.18", optional = true }
nom = "7.1.3"
question = "0.2.2"
serde = { version = "=1.0.203", features = ["derive"] }
serde_yaml = "0.9.29"
simple-file-rotation = "0.3.4"
strum = { version = "0.26.3", features = ["derive"] }
termtree = { version = "0.4.1", optional = true }
thiserror = "1.0.58"
toml = "0.8.14"
uuid = { version = "1.10.0", features = ["v4", "v5", "serde"] }
notify = { version = "6.1.1", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
regex = { version = "1.10.4", optional = true }
path-absolutize = { version = "3.1.1", optional = true }

#eof
